- Added aliases/anope.conf (For Anope IRC Services)
- Updated some documentation
- Minor error msg improvements
- Fixed a bug with wrong hub/leaf settings ("non-hub introduced leaf") causing a crash 
  (#0000732).
- Fixed a bug where an unknown set::dns directive wasn't reported as an error (#0000898)
  reported by AngryWolf
- Made it so /msg nick@server and /notice nick@server use tokens if the server supports it
  (#0000895) reported by Troco
- Added some information to the docs listing the file names for motd, rules, etc. (#0000519)
  suggested a LONG time ago by Jaw959
- Fixed a compile error with openssl enabled at redhat 9.
- Added some temporarely SQLINE debugging/trace code
- Fixed a PRIVMSG channelprefix bug reported by aragon (#0000902)
- Fixed far connect (+s +F): connects from U-lined servers are now hidden again.
- Added IP bans like *!*@194.109.* (#0000474).
- Fixed usermode +S: was accidently a local usermode (#0000909) reported by DukePyrolator.
- Enabled throttling support by default, you need to have a (correct) set::throttle block
  to make it work, otherwise it's just turned off.
- Some code cleanups (s_conf.c, now has a config_setdefaultsettings()).
- Fixed minor badwords /rehash memleak.
- Added link::options::nohostcheck which makes Unreal not to validate the incomming host/IP
  against the link::hostname field, usefull for dynamic DNS hosts.
- Some documentation improvements regarding link::hostname.
- Changed the module umode adding function to allow an 'is_allowed' function. This fuction
  defines who may set the specified usermode.
- Made it so Ulined servers can use a TS that is in the past for topics (#0000448) reported 
  by thilo
- Fixed a bug with ban version {} where some clients didn't like the request we were sending.
- Usermode +q can now be set by services admins, as stated in docs (#0000923).
- Preparing beta16: release notes ready, version updated in docs/text (except version.h).
- Changed version to beta16