@@ -198,7 +198,7 @@ help Oflags {
 	" k = Access to do local /KILLs";
 	" K = Access to do global /KILLs";
 	" b = Oper can /KLINE users from server";
-	" t = Oper can /GKLINE users from server";
+	" t = Oper can /GLINE users from server";
 	" B = Oper can remove Klines";
 	" z = Can add Z:Lines";
 	" Z = Can add global Z:Lines";
@@ -665,7 +665,7 @@ help Kline {
 help Zline {
 	" This command provides timed Z:Lines. If you match a Z:Line you cannot";
 	" connect to the server";
-	" A time of 0 in the KLINE makes it permanent (Never Expires).";
+	" A time of 0 in the ZLINE makes it permanent (Never Expires).";
 	" You may also specify the time in the format 1d10h15m30s.";
 	" IRC Operator only command.";
 	" -";
@@ -724,34 +724,6 @@ help Gzline {
 	" Example: GZLINE *@*.idiot.net 900 :Spammers (Adds a 15 min Global Z:line)";
 	"          GZLINE *@*.idiot.net 1d5h :Spammers (Adds a 29 hour Global Z:line)";
 	" NOTE: requires the can_gzline oper flag";
-};
-
-help Tkline {
-	" This command provides timed K:Lines. If you match a time K:Line you cannot";
-	" connect to the server until the time has expired";
-	" A time of 0 in the TKLINE makes it permanent (Never Expires).";
-	" You may also specify the time in the format 1d10h15m30s.";
-	" IRC Operator only command.";
-	" -";
-	" Syntax:  TKLINE <user@host mask> <seconds to be banned> :<reason>";
-	"  (Adds a Timed K:line for user@host)";
-	"          TKLINE -<user@host mask> (Removes a Timed K:line for user@host)";
-	" Example: TKLINE *@*.idiot.net 900 :Spammers (Adds a 15 min Timed K:line)";
-	"          TKLINE *@*.idiot.net 1d5h :Spammers (Adds a 29 hour Timed K:line)";
-};
-
-help Tzline {
-	" This command provides timed Z:Lines. If you match a Timed Z:Line you cannot";
-	" connect to the server until the time has expired";
-	" A time of 0 in the TZLINE makes it permanent (Never Expires).";
-	" You may also specify the time in the format 1d10h15m30s.";
-	" IRC Operator only command.";
-	" -";
-	" Syntax:  TZLINE <user@host mask> <seconds to be banned> :<reason>";
-	"  (Adds a Timed Z:line for user@host)";
-	"          TZLINE -<user@host mask> (Removes a Timed Z:line for user@host)";
-	" Example: TZLINE *@*.idiot.net 900 :Spammers (Adds a 15 min Timed Z:line)";
-	"          TZLINE *@*.idiot.net 1d5h :Spammers (Adds a 29 hour Timed Z:line)";
 };
 
 help Akill {
