@@ -2080,7 +2080,7 @@ seen. gmtime warning still there
 - Some code cleanups (s_conf.c, now has a config_setdefaultsettings()).
 - Fixed minor badwords /rehash memleak.
 - Added link::options::nohostcheck which makes Unreal not to validate the incomming host/IP
-  against the link::hostname field, usefull for dynamic DNS hosts.
+  against the link::hostname field, useful for dynamic DNS hosts.
 - Some documentation improvements regarding link::hostname.
 - Changed the module umode adding function to allow an 'is_allowed' function. This fuction
   defines who may set the specified usermode.
@@ -2090,3 +2090,4 @@ seen. gmtime warning still there
 - Usermode +q can now be set by services admins, as stated in docs (#0000923).
 - Preparing beta16: release notes ready, version updated in docs/text (except version.h).
 - Changed version to beta16
+- Various docs typo fixes, some reported by AngryWolf (#0000913)
